# agui_study

./: .dockerignore  .env.example  .gitignore  DEPLOY_DOCKER.md  Dockerfile.frontend  agui-guaid.txt  docker-compose.yml  next.config.ts  pyproject.toml
agent/: README.md  (+5 more)
apps/agui_events_demo2/: .env.example  HANDOFF.md  Makefile  README.md  pyproject.toml
apps/agui_events_demo2/src/: agent_graph.py  chart_tool.py  llms.py  server.py
apps/agui_events_demo2/ui_demo2/: .env.example  .gitignore  README.txt  index.html  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
apps/agui_events_demo2/ui_demo2/e2e/: flow.spec.ts
apps/agui_events_demo2/ui_demo2/src/: App.tsx  sse.ts  styles.css  types.ts  utils.ts
apps/server_api_ui_demo1/: .env.example  Makefile  README.md  graph.json  langgraph.json  pyproject.toml  start_server.py
apps/server_api_ui_demo1/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
apps/server_api_ui_demo1/src/: agent.py  llms.py
apps/server_api_ui_demo1/ui_demo1/: eslint.config.js  package.json  prettier.config.js  vitest.config.ts
apps/server_api_ui_demo1/ui_demo1/src/app/: page.tsx
apps/server_api_ui_demo1/ui_demo1/src/hooks/: use-file-upload.tsx  useMediaQuery.tsx
apps/server_api_ui_demo1/ui_demo1/src/lib/: agent-inbox-interrupt.ts  api-key.tsx  ensure-tool-responses.ts  multimodal-utils.ts  utils.ts
apps/server_api_ui_demo1/ui_demo1/src/providers/: Stream.tsx  Thread.tsx  client.ts
apps/server_api_ui_demo1/ui_demo1/src/test/: setup.ts
(+57 files in other folders)
